fixed spacing between list items and fixed some fonts

--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.header, .difficulty{
+    color: brown;
+    font-size: 20px;
+}
+
 .number{
     color: white;
     font-size: 25px;
@@ -29,9 +34,12 @@ html {
     font-size: 20px;  
     justify-content: center;  
     align-items: center;  
+    border: 2px solid #4CAF50; /* Green */
 }
 
 #bulletlist{
     font-size: 20px;
+    color: yellowgreen;  
+    margin-bottom: 10px;
 }
 
